--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "form-data": "^4.0.5",
     "multer": "^2.0.1",
-    "openai": "^6.18.0"
+    "openai": "^6.18.0",
+    "pdf-parse": "^2.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
